# CountDist

./: .coveragerc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  my_Makefile  my_params.ini  my_test_params.ini  package_options.ini  requirements.txt  setup.py
countdist2/: __init__.py  _version.py  calc_distances.py  file_io.py  fit_probabilities.py  fit_probabilities_class.py  fit_probabilities_v2.py  options.py  plot_proabilities.py  string_manip_helpers.py  utils.py
include/: CCfits  cfitsio
include/v3/: calc_distances.h  io.h  parse_args.h  read_config.h
include/v4/: calc_distances.h  fast_math.h  io.h  logging.h  parse_args.h  read_config.h  type.h
src/: CMakeLists.txt  logging.cpp
src/v3/: CMakeLists.txt  calc_distances.cpp  io.cpp  read_config.cpp  run_calc.cpp
src/v4/: CMakeLists.txt  bind_calc_distances.cpp  calc_distances.cpp  io.cpp  read_config.cpp  run_calc.cpp  type.cpp
tests/: CMakeLists.txt  helper_util.py  my_test_params.ini  my_test_params_ascii.ini  my_test_params_large.ini  my_test_params_small.ini  tc_config_obs.params  tc_config_true.params  test_calc_distances_cpp.cpp  test_paircounts.py  test_save_files.py
tests/test_data/: HALOGEN_mock0000_rm-like_1.0-04_sigmaz0.02_zp0.65-0.7_small.txt  catalog_three_objects.fit  catalog_three_objects.txt  catalog_three_objects_v2.fit  catalog_three_objects_v2.txt  cpp_seps_catalog_three_objects.txt  mice_cosmology.ini  params_catalog_three_objects.ini  python_seps_catalog_three_objects.txt
